<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pattern"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:paddingBottom="0dp"
        tools:context="org.yyama.moneycounter.tzs.MainActivity" >

        <TableLayout
            android:id="@+id/TableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TableRow
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:layout_weight="0"
                    android:gravity="center_horizontal"
                    android:text="@string/kind" />

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"
                    android:text="@string/num" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="center_horizontal"
                    android:text="@string/sub_total" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img10000sh"
                    style="@style/ImgStyle"
                    android:src="@drawable/img10000sh" />

                <TextView
                    android:id="@+id/Text10000sh"
                    style="@style/LinkStyle"
                    android:text="@string/sh10000" />

                <TextView
                    android:id="@+id/Num10000sh"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum10000sh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img5000sh"
                    style="@style/ImgStyle"
                    android:src="@drawable/img5000sh" />

                <TextView
                    android:id="@+id/Text5000sh"
                    style="@style/LinkStyle"
                    android:text="@string/sh5000" />

                <TextView
                    android:id="@+id/Num5000sh"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum5000sh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img2000sh"
                    style="@style/ImgStyle"
                    android:src="@drawable/img2000sh" />

                <TextView
                    android:id="@+id/Text2000sh"
                    style="@style/LinkStyle"
                    android:text="@string/sh2000" />

                <TextView
                    android:id="@+id/Num2000sh"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum2000sh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img1000sh"
                    style="@style/ImgStyle"
                    android:src="@drawable/img1000sh" />

                <TextView
                    android:id="@+id/Text1000sh"
                    style="@style/LinkStyle"
                    android:text="@string/sh1000" />

                <TextView
                    android:id="@+id/Num1000sh"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum1000sh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img500sh"
                    style="@style/ImgStyle"
                    android:src="@drawable/img500sh" />

                <TextView
                    android:id="@+id/Text500sh"
                    style="@style/LinkStyle"
                    android:text="@string/sh500" />

                <TextView
                    android:id="@+id/Num500sh"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum500sh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img200sh"
                    style="@style/ImgStyle"
                    android:src="@drawable/img200sh" />

                <TextView
                    android:id="@+id/Text200sh"
                    style="@style/LinkStyleCent"
                    android:text="@string/sh200" />

                <TextView
                    android:id="@+id/Num200sh"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum200sh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img100sh"
                    style="@style/ImgStyle"
                    android:src="@drawable/img100sh" />

                <TextView
                    android:id="@+id/Text100sh"
                    style="@style/LinkStyleCent"
                    android:text="@string/sh100" />

                <TextView
                    android:id="@+id/Num100sh"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum100sh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img50sh"
                    style="@style/ImgStyle"
                    android:src="@drawable/img50sh" />

                <TextView
                    android:id="@+id/Text50sh"
                    style="@style/LinkStyleCent"
                    android:text="@string/sh50" />

                <TextView
                    android:id="@+id/Num50sh"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum50sh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img20sh"
                    style="@style/ImgStyle"
                    android:src="@drawable/img20sh" />

                <TextView
                    android:id="@+id/Text20sh"
                    style="@style/LinkStyleCent"
                    android:text="@string/sh20" />

                <TextView
                    android:id="@+id/Num20sh"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum20sh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img10sh"
                    style="@style/ImgStyle"
                    android:src="@drawable/img10sh" />

                <TextView
                    android:id="@+id/Text10sh"
                    style="@style/LinkStyleCent"
                    android:text="@string/sh10" />

                <TextView
                    android:id="@+id/Num10sh"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum10sh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img5sh"
                    style="@style/ImgStyle"
                    android:src="@drawable/img5sh" />

                <TextView
                    android:id="@+id/Text5sh"
                    style="@style/LinkStyleCent"
                    android:text="@string/sh5" />

                <TextView
                    android:id="@+id/Num5sh"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum5sh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>
            <!-- 5cent -->

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img1sh"
                    style="@style/ImgStyle"
                    android:src="@drawable/img1sh" />

                <TextView
                    android:id="@+id/Text1sh"
                    style="@style/LinkStyleCent"
                    android:text="@string/sh1" />

                <TextView
                    android:id="@+id/Num1sh"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum1sh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <TableLayout
        android:id="@+id/TableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="0dp"
        android:layout_weight="0"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="0dp" >

        <TableRow
            android:id="@+id/TableRow18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="0dp"
            android:paddingTop="0dp" >

            <Button
                android:id="@+id/btnClear"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/all_clear" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:layout_weight="0"
                android:text="@string/total"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/allSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|top"
                android:layout_marginTop="0dp"
                android:layout_weight="10"
                android:gravity="end"
                android:textSize="25sp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/adSpace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="0dp"
        android:layout_weight="0"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>